# restapi/kes_client.go
@@ -1,20 +1,12 @@
 package restapi
 
 import (
-	"bytes"
 	"context"
 	"crypto/tls"
-	"crypto/x509"
-	"encoding/pem"
-	"errors"
-	"fmt"
 	"os"
-	"strings"
 
 	"github.com/minio/kes"
-	"github.com/minio/kes/internal/cli"
-	xhttp "github.com/minio/kes/internal/http"
-	"github.com/minio/pkg/env"
+	"github.com/minio/kes/models"
 )
 
 type KESClientI interface {
@@ -119,68 +111,18 @@ func (k KESClient) deleteIdentity(ctx context.Context, name string) error {
 	return k.Client.DeleteIdentity(ctx, kes.Identity(name))
 }
 
-func NewKESClient() (*kes.Client, error) {
+func NewKESClient(session *models.Principal) (*kes.Client, error) {
 	const DefaultServer = "https://127.0.0.1:7373"
-	// TODO: Change insecureSKipVerify to false
-	insecureSkipVerify := true
-	insecure, ok := os.LookupEnv("CONSOLE_KES_INSECURE")
-	if ok && strings.ToLower(insecure) == "true" {
-		insecureSkipVerify = true
-	}
-	certPath, ok := os.LookupEnv("CONSOLE_KES_CLIENT_CERT")
-	if !ok {
-		return nil, errors.New("no TLS client certificate. Environment variable 'CONSOLE_KES_CLIENT_CERT' is not set")
-	}
-	if strings.TrimSpace(certPath) == "" {
-		return nil, errors.New("no TLS client certificate. Environment variable 'CONSOLE_KES_CLIENT_CERT' is empty")
-	}
-
-	keyPath, ok := os.LookupEnv("CONSOLE_KES_CLIENT_KEY")
-	if !ok {
-		return nil, errors.New("no TLS private key. Environment variable 'CONSOLE_KES_CLIENT_KEY' is not set")
-	}
-	if strings.TrimSpace(keyPath) == "" {
-		return nil, errors.New("no TLS private key. Environment variable 'CONSOLE_KES_CLIENT_KEY' is empty")
-	}
-
-	certPem, err := os.ReadFile(certPath)
+	cert, err := tls.X509KeyPair([]byte(session.ClientCertificate), []byte(session.ClientKey))
 	if err != nil {
-		return nil, fmt.Errorf("failed to load TLS certificate: %v", err)
+		return nil, err
 	}
-	certPem, err = xhttp.FilterPEM(certPem, func(b *pem.Block) bool { return b.Type == "CERTIFICATE" })
-	if err != nil {
-		return nil, fmt.Errorf("failed to load TLS certificate: %v", err)
-	}
-	keyPem, err := os.ReadFile(keyPath)
-	if err != nil {
-		return nil, fmt.Errorf("failed to load TLS private key: %v", err)
-	}
-
-	privateKey, rest := pem.Decode(bytes.TrimSpace(keyPem))
-
-	if len(rest) != 0 {
-		cli.Fatalf("failed to read TLS private key: %v", err)
-	}
-	if x509.IsEncryptedPEMBlock(privateKey) {
-
-		decPrivateKey, err := x509.DecryptPEMBlock(privateKey, []byte(env.Get("CONSOLE_KES_CLIENT_PASSWORD", "")))
-		if err != nil {
-			return nil, fmt.Errorf("failed to decrypt private key: %v", err)
-		}
-		keyPem = pem.EncodeToMemory(&pem.Block{Type: privateKey.Type, Bytes: decPrivateKey})
-	}
-
-	cert, err := tls.X509KeyPair(certPem, keyPem)
-	if err != nil {
-		cli.Fatalf("failed to load TLS private key or certificate: %v", err)
-	}
-
 	addr := DefaultServer
 	if env, ok := os.LookupEnv("CONSOLE_KES_SERVER"); ok {
 		addr = env
 	}
 	return kes.NewClientWithConfig(addr, &tls.Config{
 		Certificates:       []tls.Certificate{cert},
-		InsecureSkipVerify: insecureSkipVerify,
+		InsecureSkipVerify: session.Insecure,
 	}), nil
 }
